18 September 2009: Wouter
	- autotrust tests, fix trustpoint timer deletion code.
	  fix count of valid anchors during missing remove.
	- autotrust: pick up REVOKE even if not signed with known other keys.

17 September 2009: Wouter
	- fix compile of unbound-host when --enable-alloc-checks.
	- Fix lookup problem reported by Koh-ichi Ito and Jaap Akkerhuis.
	- Manual page fixes reported by Tony Finch.

16 September 2009: Wouter
	- Fix memory leak reported by Tao Ma.
	- Fix memstats test tool for log-time-ascii log format.

15 September 2009: Wouter
	- iana portlist updated.

10 September 2009: Wouter
	- increased MAXSYSLOGLEN so .bg key can be printed in debug output.
	- use linebuffering for log-file: output, this can be significantly
	  faster than the previous fflush method and enable some class of
	  resolvers to use high verbosity (for short periods).
	  Not on windows, because line buffering does not work there.

9 September 2009: Wouter
	- Fix bug where DNSSEC-bogus messages were marked with too high TTL.
	  The RRsets would still expire at the normal time, but this would
	  keep messages bogus in the cache for too long.
	- regression test for that bug.
	- documented that load_cache is meant for debugging.

8 September 2009: Wouter
	- fixup printing errors when load_cache, they were printed to the
	  SSL connection which broke, now to the log.
	- new ldns - with fixed parse of large SOA values.

7 September 2009: Wouter
	- autotrust testbound scenarios.
	- autotrust fix that failure count is written to file.
	- autotrust fix that keys may become valid after add holddown time
	  alone, before the probe returns.

4 September 2009: Wouter
	- Changes to make unbound work with libevent-2.0.3 alpha. (in
	  configure detection due to new ssl dependency in libevent)
	- do not call sphinx for documentation when python is disabled.
	- remove EV_PERSIST from libevent timeout code to make the code
	  compatible with the libevent-2.0.  Works with older libevent too.